# stwo-verifier-sp1

./: Cargo.toml  rust-toolchain
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  config.json  example_proof.json  pcs_config.json  proof.json
