[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo" }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "9790656", features = ["parallel"], default-features = false }