[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
cairo-air = { git = "https://github.com/Okm165/stwo-cairo/", rev = "f8514bf" }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d", features = [
    "parallel",
], default-features = false }