[package]
version = "0.1.0"
name = "stwo-script"
edition = "2021"
default-run = "stwo-verifier"

[[bin]]
name = "stwo-verifier"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = "4.0.0"
stwo_cairo_prover.workspace = true
stwo-prover.workspace = true
tracing = "0.1.40"

[build-dependencies]
sp1-build = "4.0.0"
